--- a/index.html
+++ b/index.html
@@ -638,8 +638,8 @@
         <p id="liczba">
 
         </p>
-        <img id="wheel" src="wheel.png" alt="wheel">
-        <img id="ball" src="ball.png" alt="ball">
+        <img id="wheel" src="/wheel.png" alt="wheel">
+        <img id="ball" src="/ball.png" alt="ball">
     </div>
     <section class="obsluga">
         <label for="zaklad">wartość zakładu:</label>
